Fix logo on narrow portrait screen

--- a/css/header.css
+++ b/css/header.css
@@ -9,7 +9,7 @@
   padding: 0 5px;
 }
 .page-header img {
-  max-width: 100vw;
+  max-width: 95vw;
 }
 
 /* ====== Header dropdown menus ======== */
